<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".acitivity.MainActivity">
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/ll_title">-->
        <!--<include layout="@layout/title"/>-->
        <!-- -->
    <!--</LinearLayout>-->
    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorFF1592F2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="热处理"
            android:textSize="22sp"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"/>
        <!--<TextView-->
            <!--android:id="@+id/tv_login"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:gravity="center"-->
            <!--android:textSize="22sp"-->
            <!--android:textColor="#ffffff"-->
            <!--android:paddingRight="10dp"-->
            <!--android:visibility="visible"-->
            <!--android:text="登录"/>-->
    </RelativeLayout>
    <!--底部按钮-->
    <RelativeLayout
        android:id="@+id/two_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_title">
        <include layout="@layout/layout_bottom" />
    </RelativeLayout>

    <!-- 主题图片 -->
    <com.zhang.administrator.thermal.customview.SlideShowView
        android:layout_below="@+id/two_button"
        android:id="@+id/slideshowView"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/tv"
        android:layout_below="@+id/slideshowView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:paddingTop="5dp"
        android:scrollHorizontally="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusableInTouchMode="true"
        android:textSize="16sp"
        android:text="@string/tv_content"/>

    <View  android:layout_height="1px"
        android:layout_width="match_parent"
        android:background="#66CCFF"
        android:paddingBottom="3dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/slideshowView">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/imagebut1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/but"
                        android:clickable="true"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/MetalCategory"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/imagebut2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/but"
                        android:clickable="true"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/MetalPerformence"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/imagebut3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/but"
                        android:clickable="true"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/Jin"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/imagebut4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/but"
                        android:clickable="true"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/Formula"/>

                </LinearLayout>
            </LinearLayout>

            <!--视频播放的布局-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/ll_first_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/poster_stretch"/>
                    <TextView
                        android:id="@+id/tv_stretch"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="金属材料拉伸试验"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_second_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/huihuo"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="钢的回火"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/yingdu"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="布氏硬度测试"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/yingdu"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:text="洛氏硬度测试"/>
                </LinearLayout>
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:layout_marginLeft="5dp"-->
                    <!--android:layout_marginRight="5dp">-->
                    <!--<ImageView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="60dp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:background="@drawable/poster_stretch"/>-->
                    <!--<TextView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="3"-->
                        <!--android:layout_height="60dp"-->
                        <!--android:gravity="center"-->
                        <!--android:text="金属材料拉伸试验"/>-->
                <!--</LinearLayout>-->
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:layout_marginLeft="5dp"-->
                    <!--android:layout_marginRight="5dp">-->
                    <!--<ImageView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="60dp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:background="@drawable/poster_stretch"/>-->
                    <!--<TextView-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="3"-->
                        <!--android:layout_height="60dp"-->
                        <!--android:gravity="center"-->
                        <!--android:text="金属材料拉伸试验"/>-->
                <!--</LinearLayout>-->

            </LinearLayout>





        </LinearLayout>
    </ScrollView>











    </RelativeLayout>
